# cmrep_python

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: prebuild.sh
src/: CMRepPythonBindings.cxx
